# a

./: .coveragerc  .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env.staging.example  .gitignore  .gitleaks.allowlist.toml  .gitleaks.baseline.json  .sops.yaml  .trivyignore  404.html  CHANGELOG.md  Dockerfile  Dockerfile.backend  Dockerfile.cli  README-BACKUP-LOGS.md  README-CDN.md  README-CI-FIX53.md  README-CI-FIX54.md  README-CI-FIX55.md  README-CI-FIX56.md  README-CI-FIX57.md  README-CI-FIX58.md  README-CI-FULL-STAB.md  README-CI-TRIAGE.md  README-DOCS.md  README-ENV.md  README-HEALTH.md  README-LINTS.md  README-METRICS.md  README-MONITORING.md  README-OAUTH-GOOGLE.md  README-ONBOARDING.md  README-RBAC.md  README-RELEASE.md  README-SCALING.md  README-SECRETS.md  README.md  ROADMAP.md  (+16 more)
backend/: README.md  gunicorn_conf.py  pyproject.toml  start_gunicorn.sh
backend/alembic/: README  env.py  script.py.mako
backend/api/: index.html
backend/app/: __init__.py  api.py  audit_api.py  audit_log.py  auth.py  auth_google.py  cli.py  config.py  cors_config.py  db.py  deps.py  features.py  hash.py  health.py  logging_setup.py  main.py  metrics.py  middleware_features.py  models.py  rate_limit.py  repo_users.py  routes_features.py  schemas.py  security.py  security_headers.py  users_api.py
backend/cli/: __init__.py
backend/tests/: conftest.py  test_aa_db_reset.py  test_audit_log.py  test_auth.py  test_auth_db.py  test_backup_restore_sqlite.py  test_bump_version_dry.py  test_ci_smoke_guards.py  test_cli_admin.py  test_cli_minimal.py  test_cors_config.py  (+33 more)
(+297 files in other folders)
